volexc/tests/ui/mapkey_union_nested.typescript.out
Error: invalid map key type: unions cannot be used as map keys in TypeScript
    ╭─[ mapkey_union_nested.vol:16:12 ]
    │
 16 │     data: {Shape:string};
    │            ──┬──  
    │              ╰──── union 'Shape' used here
────╯