volexc/tests/ui/mapkey_union_nested.vol
// rust:pass
// go:fail
// typescript:fail
// Union with struct variant: valid in Rust only
struct Point {
    x: u32;
    y: u32;
}

union Shape {
    Circle(u32) = 1;
    Rectangle(Point) = 2;
}

struct Test {
    data: {Shape:string};
}
